[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/drill_orbit.gd" type="Script" id=1]
[ext_resource path="res://scenes/drill_sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/robody.png" type="Texture" id=3]
[ext_resource path="res://script/gear.gd" type="Script" id=4]
[ext_resource path="res://assets/robogear.png" type="Texture" id=5]
[ext_resource path="res://script/bot.gd" type="Script" id=6]
[ext_resource path="res://assets/gemindicator_empty.png" type="Texture" id=7]
[ext_resource path="res://script/indicators.gd" type="Script" id=8]
[ext_resource path="res://script/indicator.gd" type="Script" id=9]

[node name="bot" type="Sprite"]
light_mask = 0
position = Vector2( 540, 180 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
script = ExtResource( 6 )

[node name="indicators" type="Node2D" parent="."]
position = Vector2( -374.842, -62 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 8 )

[node name="indicator_1" type="Sprite" parent="indicators"]
light_mask = 0
texture = ExtResource( 7 )
script = ExtResource( 9 )

[node name="indicator_2" type="Sprite" parent="indicators"]
light_mask = 0
position = Vector2( 142.704, 0 )
texture = ExtResource( 7 )
script = ExtResource( 9 )

[node name="indicator_3" type="Sprite" parent="indicators"]
light_mask = 0
position = Vector2( 278.614, 0 )
texture = ExtResource( 7 )
script = ExtResource( 9 )

[node name="drill_orbit" type="Node2D" parent="."]
position = Vector2( 0, 100 )
script = ExtResource( 1 )

[node name="drill_static" parent="drill_orbit" instance=ExtResource( 2 )]
position = Vector2( 80, 0 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
z_index = -10

[node name="gear_left" type="Sprite" parent="."]
light_mask = 0
position = Vector2( -626.975, -90 )
z_index = -1
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="gear_right" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 662.253, -90 )
z_index = -1
texture = ExtResource( 5 )
script = ExtResource( 4 )
